[metadata]
name = euc.kingsong
version = 0.1.1
author = Mariusz Kryński
author-email = mrk@sed.pl
home-page = https://github.com/mrk-its/euc.kingsong
description = python library for KingSong Electric Unicycles
long-description = file: README.md
license = MIT
license-file = LICENSE
platform = any
keywords = euc, dbussy, kingsong
classifiers =
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = true
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*, != 3.3.*, != 3.5.*
packages = euc.kingsong
test_suite = tests
setup_requires = setuptools
install_requires =
  euc>=0.1.5
tests_require =
  pytest

[options.entry_points]
ble.service.handler =
  0000ffe0-0000-1000-8000-00805f9b34fb = euc.kingsong:KS

[bdist_wheel]
universal = 1

[options.extras_require]
dev =
  black
  flake8
tests =
